[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://monkey.png" type="Texture" id=2]
[ext_resource path="res://Monkey.gd" type="Script" id=3]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38, 60 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 80.7448, 2.25304, 0, 0, 0, 0, 134.716, 0.665634, 0, 0, 0, 0, 28.3605, 0.665634, 0, 0, 0, 0, 244.247, -0.921768, 0, 0, 0, 0, 344.253, 3.84044, 0, 0, 0, 0, 426.798, 3.84044, 0, 0, 0, 0, 80.7448, 2.25304, 0, 0, 0, 0, 306.156, -2.50917, 0, 0, 0, 0, 388.701, 3.84044, 0, 0, 0, 0, 179.164, -2.50917 )
}

[node name="Main" type="Node2D"]
position = Vector2( 1.5874, 1.5874 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2.0
margin_top = -2.0
margin_right = 1108.0
margin_bottom = 731.0
color = Color( 0.941176, 0.886275, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MelonTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="BombTimer" type="Timer" parent="."]

[node name="Monkey" type="Area2D" parent="."]
position = Vector2( 232.394, 534.65 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Monkey"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monkey"]
position = Vector2( -6.5874, -1.5874 )
shape = SubResource( 1 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="MobSpawnLoc" type="PathFollow2D" parent="MobPath"]
position = Vector2( 80.7448, 2.25304 )
rotation = -0.0294037

[node name="NukeTimer" type="Timer" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="timeout" from="MelonTimer" to="." method="_on_MelonTimer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
[connection signal="area_entered" from="Monkey" to="Monkey" method="_on_Monkey_area_entered"]
[connection signal="body_entered" from="Monkey" to="Monkey" method="_on_Monkey_body_entered"]
[connection signal="hit" from="Monkey" to="." method="_on_Monkey_hit"]
[connection signal="timeout" from="NukeTimer" to="." method="_on_NukeTimer_timeout"]
[connection signal="game_start" from="CanvasLayer" to="." method="start_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
